refactor: remove docs/*.md and add vscode intel img

--- a/v1.md
+++ b/v1.md
@@ -37,7 +37,7 @@
     - [customReplaceDictionary](#customreplacedictionary)
     - [cssPreflight](#csspreflight)
     - [supportCustomLengthUnitsPatch](#supportcustomlengthunitspatch)
-  - [使用 arbitrary values](#使用-arbitrary-values)
+  - [使用任意值(arbitrary values)](#使用任意值arbitrary-values)
   - [关于rem转化rpx](#关于rem转化rpx)
   - [变更日志](#变更日志)
   - [常见问题](#常见问题)
@@ -230,9 +230,9 @@ cssPreflight: {
 
 使用 `npm hooks` 的方式来给 `tailwindcss` 自动打 `patch`
 
-## 使用 arbitrary values
+## 使用任意值(arbitrary values)
 
-详见 [tailwindcss/using-arbitrary-values 章节](https://tailwindcss.com/docs/adding-custom-styles#using-arbitrary-values) | [Sample](./docs/arbitrary-values.md)
+详见 [tailwindcss/using-arbitrary-values 章节](https://tailwindcss.com/docs/adding-custom-styles#using-arbitrary-values)
 
 ## 关于rem转化rpx
 
