--- a/website/docs/migrations/v1.md
+++ b/website/docs/migrations/v1.md
@@ -1,6 +1,6 @@
-# 从 v1 迁移到 v2
+## 从 v1 迁移
 
-在 `2.x` 版本中，所有原先的 `v1` 的插件还是像之前一样导出，使用方式也一样，不过 `vite` 插件有一些小变化:
+在 `2.x` 版本中，可以把之前使用的 `webpack` 插件，全部更换为 `UnifiedWebpackPluginV5` 插件，不过 `vite` 插件的导出有一些小变化:
 
 `1.x`:
 
@@ -11,9 +11,8 @@ import vwt from 'weapp-tailwindcss-webpack-plugin/vite';
 `2.x`:
 
 ```js
-// ViteWeappTailwindcssPlugin 就是原先上面 1.x 的 vwt 
 // UnifiedViteWeappTailwindcssPlugin 就是新的插件
-import { UnifiedViteWeappTailwindcssPlugin, ViteWeappTailwindcssPlugin } from 'weapp-tailwindcss-webpack-plugin/vite';
+import { UnifiedViteWeappTailwindcssPlugin } from 'weapp-tailwindcss-webpack-plugin/vite';
 ```
 
 另外新的 `UnifiedWebpackPluginV5` 可以直接从 `weapp-tailwindcss-webpack-plugin` 引入，同时在新的 `UnifiedWebpackPluginV5` 中，之前所有的配置项都被继承了过来，只需要用它直接替换原先插件即可。
