--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -7,3 +7,9 @@
 ![区白白](/img/showcase/0.qubaibai/qrcode.jpg)
 
 区白白是一个针对小区业主的小程序，它将不同的小区变成一个个的线上社区。业主可以在这个线上社区里参与小区事务，享受区白白的其他服务。
+
+## MBTI告诉你
+
+![MBTI告诉你](/img/showcase/1.mbti/qrcode.jpg)
+
+ChatGPT+通义千问+360智脑驱动的MBTI测试小程序
