chore(docs): add jinxiu case

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -13,3 +13,9 @@
 ![MBTI告诉你](/img/showcase/1.mbti/qrcode.jpg)
 
 ChatGPT+通义千问+360智脑驱动的MBTI测试小程序
+
+## 今修
+
+![今修小程序](/img/showcase/2.jinxiu/qrcode.jpg)
+
+南通本土手机维修业务小程序
