docs: update cli quick-start usage

--- a/website/docs/quick-start/native/1.install-plugin.md
+++ b/website/docs/quick-start/native/1.install-plugin.md
@@ -9,6 +9,8 @@
 npm i -D weapp-tailwindcss @weapp-tailwindcss/cli
 ```
 
+这样 `weapp-tailwindcss` 和 `cli` 工具就被安装在你的本地了
+
 ## 执行初始化命令
 
 在命令行中运行
@@ -17,18 +19,24 @@ npm i -D weapp-tailwindcss @weapp-tailwindcss/cli
 npx weapp-tw init
 ```
 
-对项目进行初始化
+对现有的原生小程序项目，进行 `weapp-tailwindcss` 的初始化
 
-这时候主要做了 `3` 件事情:
+执行后，会发现主要有三个文件改动，`CLI` 主要做了 `3` 件事情:
 
 - 创建 `weapp-tw.config.js` 文件，这个是 `@weapp-tailwindcss/cli` 的配置文件
-- 修改 `package.json`, 添加开发和构建脚本
-- 修改 `project.config.json` 来适配构建产物
+- 修改 `package.json`, 添加 `dev` 和 `build` 开发和构建脚本, 和 `postinstall`
+- 修改 `project.config.json` 内容，来适配构建产物
 
 ## 开始运行
 
-使用 `npm run dev` 进入开发模式, 构建产物到 `dist` 目录
+使用 `npm run dev` 进入开发模式, 此时是有热更新的，主要用于开发
 
-使用 `npm run build` 进行构建产物到 `dist` 目录
+使用 `npm run build` 进行构建
 
-使用微信开发者工具，导入这个目录，然后即可预览效果
+> 构建产物都在 `dist` 目录
+
+使用微信开发者工具，直接导入这个目录，然后即可预览效果
+
+## 更多
+
+更多详情和配置，请查看 `更多的细节` 章节
