--- a/website/docs/quick-start/native/0.install.md
+++ b/website/docs/quick-start/native/0.install.md
@@ -2,15 +2,15 @@
 
 ## 前言
 
-很荣幸，我们在 `weapp-tailwindcss@3.2.0` 版本中，引入了微信小程序原生支持的能力。 (其实其他平台的原生小程序开发也适用)
+很荣幸，我们在 `weapp-tailwindcss@3.2.0` 版本开始，引入了微信小程序原生支持的能力。 (其他平台的原生小程序开发，也非常容易兼容)
 
 接下来让我们看看，如何进行使用吧！
 
 本教程演示的是，使用微信开发者工具创建的原生 `js` 小程序，以及原生 `js` `skyline` 小程序使用 `tailwindcss` 的方式
 
-如果你使用 `typescript` 进行小程序开发，也可以遵循本教程，只需要最后更改一下配置即可。
+如果你使用 `typescript` 进行小程序开发，也可以遵循本教程，只需要最后更改一下 `weapp-tw.config.js` 中的 `src` 配置为 `miniprogram` 即可(相对路径)。
 
-## 运行环境
+## 前置运行环境
 
 请确保你的 `nodejs` 版本 `>=16.6.0`。目前低于 `16` 的长期维护版本(`偶数版本`) 都已经结束了生命周期，建议安装 `nodejs` 的 `LTS` 版本，详见 [nodejs/release](https://github.com/nodejs/release)。
 
@@ -20,7 +20,7 @@
 
 ## 1. 使用包管理器安装 `tailwindcss`
 
-首先，假如你项目你没有 `package.json` 文件, 你需要手动创建一下:
+首先，假如你项目目录下，没有 `package.json` 文件, 你需要执行命令，或者手动创建一下:
 
 运行 `npm init -y` 命令，快速创建一个 `package.json` 文件在你的项目下
 
@@ -33,7 +33,11 @@ npm install -D tailwindcss postcss
 npx tailwindcss init
 ```
 
+这样 `tailwindcss` 就被安装到你项目本地了
+
 ## 2. 在项目目录下创建 `postcss.config.js` 并注册 `tailwindcss`
+
+内容如下:
 
 ```js
 // postcss.config.js
@@ -44,15 +48,18 @@ module.exports = {
 }
 ```
 
+这个文件和 `tailwind.config.js` 平级
+
 ## 3. 配置 `tailwind.config.js`
 
 `tailwind.config.js` 是 `tailwindcss` 的配置文件，我们可以在里面配置 `tailwindcss` 的各种行为。
 
+这里给出了一份 微信小程序 通用示例，具体要根据你自己项目的目录结构进行配置
+
 ```js
 /** @type {import('tailwindcss').Config} */
 module.exports = {
-  // 这里给出了一份 微信小程序 通用示例，具体要根据你自己项目的目录结构进行配置
-  // 假如你使用 ts 开发，则需要把ts配置进去 
+  // 假如你使用 ts 开发，则需要在下方的 glob 表达式中，把 ts 后缀配置进去 
   content: ['**/*.{js,wxml}', '!node_modules/**', '!dist/**'],
   corePlugins: {
     // 小程序不需要 preflight，因为这主要是给 h5 的，如果你要同时开发小程序和 h5 端，你应该使用环境变量来控制它
@@ -71,6 +78,4 @@ module.exports = {
 @tailwind utilities;
 ```
 
-## Refers
-
-[tailwindcss官方配置项link](https://tailwindcss.com/docs/configuration)
+接下来，赶紧进入下一步，安装 `weapp-tailwindcss` 并运行吧！
