--- a/website/docs/quick-start/native/0.install.md
+++ b/website/docs/quick-start/native/0.install.md
@@ -39,8 +39,7 @@ npx tailwindcss init
 
 内容如下:
 
-```js
-// postcss.config.js
+```js title="postcss.config.js"
 module.exports = {
   plugins: {
     tailwindcss: {},
@@ -56,7 +55,7 @@ module.exports = {
 
 这里给出了一份 微信小程序 通用示例，具体要根据你自己项目的目录结构进行配置
 
-```js
+```js title="tailwind.config.js"
 /** @type {import('tailwindcss').Config} */
 module.exports = {
   // 假如你使用 ts 开发，则需要在下方的 glob 表达式中，把 ts 后缀配置进去 
