--- a/website/docs/quick-start/native/1.install-plugin.mdx
+++ b/website/docs/quick-start/native/1.install-plugin.mdx
@@ -1,13 +1,42 @@
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 # 2. 安装这个插件并运行
 
 ## 安装插件
 
 在项目目录下，执行:
 
+
+<Tabs>
+  <TabItem label="npm" value="npm">
+  
+
 ```bash
-# npm / yarn /pnpm
 npm i -D weapp-tailwindcss @weapp-tailwindcss/cli
 ```
+
+
+  </TabItem>
+  <TabItem label="yarn" value="yarn">
+  
+
+```bash
+yarn add -D weapp-tailwindcss @weapp-tailwindcss/cli
+```
+
+
+  </TabItem>
+  <TabItem label="pnpm" value="pnpm">
+  
+
+```bash
+pnpm i -D weapp-tailwindcss @weapp-tailwindcss/cli
+```
+
+
+  </TabItem>
+</Tabs>
 
 这样 `weapp-tailwindcss` 和 `cli` 工具就被安装在你的本地了
 
