--- a/website/docs/quick-start/this-plugin.mdx
+++ b/website/docs/quick-start/this-plugin.mdx
@@ -10,8 +10,9 @@ import TabItem from '@theme/TabItem';
   
 ```bash
 npm i -D weapp-tailwindcss
-# 可以执行一下 patch 方法
-npx weapp-tw patch
+
+# 假如 tailwindcss 在 weapp-tailwindcss 之后安装，可以手动执行一下 patch 方法
+# npx weapp-tw patch
 ```
 
   </TabItem>
@@ -19,8 +20,9 @@ npx weapp-tw patch
   
 ```bash
 yarn add -D weapp-tailwindcss
-# 可以执行一下 patch 方法
-npx weapp-tw patch
+
+# 假如 tailwindcss 在 weapp-tailwindcss 之后安装，可以手动执行一下 patch 方法
+# npx weapp-tw patch
 ```
 
   </TabItem>
@@ -28,8 +30,9 @@ npx weapp-tw patch
   
 ```bash
 pnpm i -D weapp-tailwindcss
-# 可以执行一下 patch 方法
-npx weapp-tw patch
+
+# 假如 tailwindcss 在 weapp-tailwindcss 之后安装，可以手动执行一下 patch 方法
+# npx weapp-tw patch
 ```
 
   </TabItem>
