chore: add showcase https://github.com/sonofmagic/weapp-tailwindcss/issues/270#issuecomment-2221971807

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -19,3 +19,9 @@ ChatGPT+通义千问+360智脑驱动的MBTI测试小程序
 ![今修小程序](/img/showcase/2.jinxiu/qrcode.jpg)
 
 南通本土手机维修业务小程序
+
+## 聚贞顺
+
+![聚贞顺](/img/showcase/3.juzhenshun/qrcode.jpg)
+
+专业买卖二手自行车平台
