修复一些文本内容和格式 (#360)
* 修复一些文本内容和格式

* Apply suggestions from code review

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -1,6 +1,6 @@
 # 优秀案例展示
 
-> 以下的排名按照 [谁在使用？](https://github.com/sonofmagic/weapp-tailwindcss/issues/270) 的小程序码/二维码提交时间顺序为基准
+以下的排名按照[谁在使用？](https://github.com/sonofmagic/weapp-tailwindcss/issues/270)的小程序码或二维码提交时间顺序为基准
 
 ## 区白白
 
@@ -8,11 +8,11 @@
 
 区白白是一个针对小区业主的小程序，它将不同的小区变成一个个的线上社区。业主可以在这个线上社区里参与小区事务，享受区白白的其他服务。
 
-## MBTI告诉你
+## MBTI 告诉你
 
-![MBTI告诉你](/img/showcase/1.mbti/qrcode.jpg)
+![MBTI 告诉你](/img/showcase/1.mbti/qrcode.jpg)
 
-ChatGPT+通义千问+360智脑驱动的MBTI测试小程序
+ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 
 ## 今修
 
