fix(docs): 修复文档格式和内容

--- a/website/docs/issues/v1.md
+++ b/website/docs/issues/v1.md
@@ -2,9 +2,9 @@
 
 ## 我在 `js` 里写了 `tailwindcss` 的任意值，为什么没有生效?
 
-详见 [issue#28](https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin/issues/28)
+相关 issue：[#28](https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin/issues/28)
 
-A: 因为这个插件，主要是针对, `wxss`,`wxml` 和 `jsx` 进行转义的，`js` 里编写的 `string` 是不转义的。如果你有这样的需求可以这么写:
+A: 因为这个插件，主要是针对，`wxss`、`wxml` 和 `jsx` 进行转义的，`js` 里编写的 `string` 是不转义的。如果你有这样的需求可以这么写：
 
 ```js
 import { replaceJs } from 'weapp-tailwindcss-webpack-plugin/replace'
@@ -14,7 +14,7 @@ const cardsColor = reactive([
 ])
 ```
 
-> 你不用担心把代码都打进来导致体积过大，我在 'weapp-tailwindcss-webpack-plugin/replace' 中，只暴露了2个方法，代码体积 1k左右，esm格式。
+> 你不用担心把代码都打进来导致体积过大，我在 'weapp-tailwindcss-webpack-plugin/replace' 中，只暴露了 2 个方法，代码体积 1k 左右并使用了 esm 格式。
 
 ## replaceJs 跨端注意点
 
