--- a/website/docs/migrations/v1.md
+++ b/website/docs/migrations/v1.md
@@ -1,14 +1,20 @@
 # 从 v1 迁移到 v2
 
-在 `2.x` 版本中，可以把之前使用的 `webpack` 插件，全部更换为 `UnifiedWebpackPluginV5` 插件，不过 `vite` 插件的导出有一些小变化:
+本文提供了有关从 v1 迁移到 v2 中影响开发者的变更信息。
 
-`1.x`:
+在 `2.x` 版本中，可以把之前使用的 `webpack` 插件，全部替换为 `UnifiedWebpackPluginV5` 插件，不过 `vite` 插件的导出有一些小变化：
+
+`1.x`：
+
+#### JavaScript
 
 ```js
 import vwt from 'weapp-tailwindcss-webpack-plugin/vite';
 ```
 
-`2.x`:
+`2.x`：
+
+#### JavaScript
 
 ```js
 // UnifiedViteWeappTailwindcssPlugin 就是新的插件
@@ -17,7 +23,9 @@ import { UnifiedViteWeappTailwindcssPlugin } from 'weapp-tailwindcss-webpack-plu
 
 另外新的 `UnifiedWebpackPluginV5` 可以直接从 `weapp-tailwindcss-webpack-plugin` 引入，同时在新的 `UnifiedWebpackPluginV5` 中，之前所有的配置项都被继承了过来，只需要用它直接替换原先插件即可。
 
-另外不要忘记把:
+另外不要忘记把 `postinstall` 添加进你的 `package.json` 里，然后清除原先的打包缓存之后重新打包运行。
+
+#### JSON
 
 ```json
  "scripts": {
@@ -25,4 +33,4 @@ import { UnifiedViteWeappTailwindcssPlugin } from 'weapp-tailwindcss-webpack-plu
  }
 ```
 
-添加进你的 `package.json` 里，然后清除原先的打包缓存之后重新打包运行。
+
