chore: add case 谁在使用 weapp-tailwindcss ？ #270

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -25,3 +25,9 @@ ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 ![聚贞顺](/img/showcase/3.juzhenshun/qrcode.jpg)
 
 专业买卖二手自行车平台
+
+## 安心校友圈
+
+![安心校友圈](/img/showcase/4.安心校友圈/qrcode.jpg)
+
+大学生内部社交圈子
