docs: add showcase

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -31,3 +31,9 @@ ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 ![安心校友圈](/img/showcase/4.安心校友圈/qrcode.jpg)
 
 大学生内部社交圈子
+
+## 一键呼援
+
+![一键呼援](/img/showcase/5.一键呼援/qrcode.jpg)
+
+一键呼援的企业级方案
