chore(deps): upgrade

--- a/website/docs/migrations/v3.md
+++ b/website/docs/migrations/v3.md
@@ -6,7 +6,7 @@ v4 版本相比于 v3, 主要没有什么影响功能的重大变动，假如你
 
 1. 添加 `@weapp-tailwindcss/merge` 包作为小程序版本的 `tailwind-merge`
 1. 增加 `ignoreTaggedTemplateExpressionIdentifiers` 和 `ignoreCallExpressionIdentifiers` 配置，用于和 `@weapp-tailwindcss/merge` 结合起来使用
-1. 在安装 `@weapp-tailwindcss/merge` 时自动设置 `ignoreCallExpressionIdentifiers` 为 `['cn','cva']` 默认不进行转义里面的字面量
+1. 在安装 `@weapp-tailwindcss/merge` 时自动设置 `ignoreCallExpressionIdentifiers` 为 `['twMerge', 'twJoin', 'cva']` 默认不进行转义里面的字面量
 1. 更改 `cssChildCombinatorReplaceValue` 默认值从 `['view']` -> `['view', 'text']` 为了更好的小程序开发体验
 
 
