--- a/website/docs/quick-start/native/0.install.mdx
+++ b/website/docs/quick-start/native/0.install.mdx
@@ -49,7 +49,7 @@ import TabItem from '@theme/TabItem';
   <TabItem label="npm" value="npm">
   
 ```bash
-npm i -D tailwindcss postcss autoprefixer
+npm i -D tailwindcss@3 postcss autoprefixer
 # 初始化 tailwind.config.js 文件
 npx tailwindcss init
 ```
@@ -58,7 +58,7 @@ npx tailwindcss init
   <TabItem label="yarn" value="yarn">
   
 ```bash
-yarn add -D tailwindcss postcss autoprefixer
+yarn add -D tailwindcss@3 postcss autoprefixer
 # 初始化 tailwind.config.js 文件
 npx tailwindcss init
 ```
@@ -67,7 +67,7 @@ npx tailwindcss init
   <TabItem label="pnpm" value="pnpm">
   
 ```bash
-pnpm i -D tailwindcss postcss autoprefixer
+pnpm i -D tailwindcss@3 postcss autoprefixer
 # 初始化 tailwind.config.js 文件
 npx tailwindcss init
 ```
