--- a/website/docs/migrations/v3.md
+++ b/website/docs/migrations/v3.md
@@ -1,5 +1,15 @@
 # 从 v3 迁移到 v4
 
+:::warning
+由于 `tailwindcss@4` 改动较大，直接变成了一个样式预处理器，和 `sass` / `less` 类似。
+
+目前 `weapp-tailwindcss@4` 版本并没有较好地兼容 `tailwindcss@4`, 
+
+请继续以 `weapp-tailwindcss@4` + `tailwindcss@3` 的方式使用
+
+等待 `weapp-tailwindcss` 正式兼容改造的文档发布 (2025-02-12)
+:::
+
 v4 版本相比于 v3, 主要没有什么影响功能的重大变动，假如你没有用到什么复杂自定义配置，那么完全可以平滑升级上来。
 
 ## 特性更新
@@ -17,3 +27,7 @@ v4 版本相比于 v3, 主要没有什么影响功能的重大变动，假如你
 2. 增加 `weapp-tailwindcss/escape` 来取代 `weapp-tailwindcss/replace`, `weapp-tailwindcss/replace` 导出被移除
 3. 项目 `monorepo` 区分包
 4. 项目打包方式从 `rollup` 变为 `tsup`
+
+## pnpm@10.x
+
+假如你已经升级到了 `pnpm@10.x`，在安装依赖后，请执行 `pnpm approve-builds` 来运行一些 `npm hook` 命令
