chore: bump version

--- a/website/docs/migrations/v3.md
+++ b/website/docs/migrations/v3.md
@@ -10,7 +10,11 @@
 等待 `weapp-tailwindcss` 正式兼容改造的文档发布 (2025-02-12)
 :::
 
-v4 版本相比于 v3, 主要没有什么影响功能的重大变动，假如你没有用到什么复杂自定义配置，那么完全可以平滑升级上来。
+v4 版本相比于 v3, 影响功能的重大变动较少，假如你没有用到什么复杂自定义配置，那么完全可以平滑升级上来。
+
+## 重大变更
+
+1. 移除 [`jsAstTool`](/docs/api/interfaces/UserDefinedOptions#jsasttool) 的 `ast-grep` 支持，现在全部使用 `babel` 进行 `ast` 处理，假如你使用了这个配置，你可以保持不动，或者你可以把它删掉。
 
 ## 特性更新
 
