--- a/website/docs/quick-start/v4/taro-webpack.mdx
+++ b/website/docs/quick-start/v4/taro-webpack.mdx
@@ -3,7 +3,7 @@
 ## 安装
 
 ```bash npm2yarn
-npm install tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
+npm install -D tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
 ```
 
 ## 配置
