--- a/website/docs/quick-start/v4/taro-vite.mdx
+++ b/website/docs/quick-start/v4/taro-vite.mdx
@@ -3,6 +3,6 @@
 ## 1. 安装
 
 ```bash npm2yarn
-npm install tailwindcss @tailwindcss/vite weapp-tailwindcss
+npm install -D tailwindcss @tailwindcss/vite weapp-tailwindcss
 ```
 
