--- a/website/docs/quick-start/v4/uni-app-vite.mdx
+++ b/website/docs/quick-start/v4/uni-app-vite.mdx
@@ -3,7 +3,7 @@
 ## 1. 安装
 
 ```bash npm2yarn
-npm install tailwindcss @tailwindcss/vite weapp-tailwindcss
+npm install -D tailwindcss @tailwindcss/vite weapp-tailwindcss
 ```
 
 ## 2. 配置 `vite.config.ts`
