--- a/website/docs/quick-start/v4/uni-app-webpack.mdx
+++ b/website/docs/quick-start/v4/uni-app-webpack.mdx
@@ -1,5 +1,5 @@
 # uni-app cli vue2 webpack
 
 ```bash npm2yarn
-npm install tailwindcss @tailwindcss/postcss
+tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
 ```
