--- a/website/docs/quick-start/v4/uni-app-webpack.mdx
+++ b/website/docs/quick-start/v4/uni-app-webpack.mdx
@@ -65,6 +65,15 @@ if (webpack.version[0] > 4) {
 module.exports = config
 ```
 
+## 添加样式
+
+在项目目录下，创建一个 `index.css`，然后添加以下内容：
+
+```css title="index.css"
+@import "tailwindcss";
+```
+
+
 然后直接运行到小程序即可
 
 ## 参考模板
