docs: add weapp-vite docs

--- a/website/docs/quick-start/v4/taro-vite.mdx
+++ b/website/docs/quick-start/v4/taro-vite.mdx
@@ -10,7 +10,7 @@ npm install -D tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
 
 ## 配置
 
-```js titl="config/index.ts"
+```js title="config/index.ts"
 import { UnifiedViteWeappTailwindcssPlugin } from 'weapp-tailwindcss/vite'
 import tailwindcss from '@tailwindcss/postcss'
 
