chore: add docs

--- a/website/docs/quick-start/v4/weapp-vite.mdx
+++ b/website/docs/quick-start/v4/weapp-vite.mdx
@@ -20,6 +20,16 @@ export default defineConfig({
   plugins: [
     UnifiedViteWeappTailwindcssPlugin({
       rem2rpx: true,
+      tailwindcss: {
+        // 显示声明用的是 tailwindcss v4
+        version: 4,
+        v4: {
+          cssEntries: [
+            // app.css 的路径
+            path.resolve(import.meta.dirname, './app.css'),
+          ],
+        },
+      },
     }),
   ],
 })
