chore: bump version

--- a/website/docs/quick-start/v4/taro-vite.mdx
+++ b/website/docs/quick-start/v4/taro-vite.mdx
@@ -1,3 +1,5 @@
+import Patch from './patch.mdx'
+
 # Taro vite
 
 ## 安装
@@ -7,6 +9,8 @@ npm install -D tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
 ```
 
 > 这里不使用 `@tailwindcss/vite` 是由于 `taro` 配置没法加载纯 `esm` 不是 `cjs` 的包, 会爆错误 `No "exports" main defined`
+
+<Patch />
 
 ## 配置
 
