--- a/website/docs/quick-start/v4/uni-app-vite.mdx
+++ b/website/docs/quick-start/v4/uni-app-vite.mdx
@@ -1,3 +1,5 @@
+import Patch from './patch.mdx'
+
 # uni-app cli vue3 vite
 
 ## 1. 安装
@@ -5,6 +7,8 @@
 ```bash npm2yarn
 npm install -D tailwindcss @tailwindcss/vite weapp-tailwindcss
 ```
+
+<Patch />
 
 ## 2. 配置 `vite.config.ts`
 
