--- a/website/docs/quick-start/v4/weapp-vite.mdx
+++ b/website/docs/quick-start/v4/weapp-vite.mdx
@@ -1,3 +1,5 @@
+import Patch from './patch.mdx'
+
 # Weapp-vite
 
 ## 安装
@@ -5,6 +7,8 @@
 ```bash npm2yarn
 npm install -D tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
 ```
+
+<Patch/>
 
 ## 配置
 
