--- a/website/docs/migrations/v3.md
+++ b/website/docs/migrations/v3.md
@@ -1,16 +1,20 @@
 # 从 v3 迁移到 v4
 
-:::warning
-由于 `tailwindcss@4` 改动较大，直接变成了一个样式预处理器，和 `sass` / `less` 类似。
+<!-- :::warning -->
+<!-- 由于 `tailwindcss@4` 改动较大，直接变成了一个样式预处理器，和 `sass` / `less` 类似。
 
-目前 `weapp-tailwindcss@4` 版本并没有较好地兼容 `tailwindcss@4`, 
+目前 `weapp-tailwindcss@4` 版本并没有较好地兼容 `tailwindcss@4`,  -->
 
-请继续以 `weapp-tailwindcss@4` + `tailwindcss@3` 的方式使用
+<!-- 请继续以 `weapp-tailwindcss@4` + `tailwindcss@3` 的方式使用
 
 等待 `weapp-tailwindcss` 正式兼容改造的文档发布 (2025-02-12)
-:::
+::: -->
 
-v4 版本相比于 v3, 影响功能的重大变动较少，假如你没有用到什么复杂自定义配置，那么完全可以平滑升级上来。
+`tailwindcss@4` 改动较大，直接变成了一个样式预处理器，和 `sass` / `less` 类似，所以你不应该让 `tailwindcss@4` 和  `sass`, `less` 一起使用。
+
+所以关于这方面的改动会比较多, 可能你需要把很多 `.scss`,`.less` 文件后缀改成 `.css`
+
+`v4` 版本相比于 `v3`, 影响功能的重大变动较少，假如你没有用到什么复杂自定义配置，那么完全可以平滑升级上来。
 
 ## 重大变更
 
@@ -34,4 +38,4 @@ v4 版本相比于 v3, 影响功能的重大变动较少，假如你没有用到
 
 ## pnpm@10.x
 
-假如你已经升级到了 `pnpm@10.x`，在安装依赖后，请执行 `pnpm approve-builds` 来运行一些 `npm hook` 命令
+假如你已经升级到了 `pnpm@10.x`，在安装依赖后，可能需要执行 `pnpm approve-builds` 来运行一些 `npm hook` 命令
