chore: replace @import "tailwindcss";

--- a/website/docs/quick-start/v4/taro-vite.mdx
+++ b/website/docs/quick-start/v4/taro-vite.mdx
@@ -46,11 +46,11 @@ import tailwindcss from '@tailwindcss/postcss'
 在项目目录下，创建一个 `index.css`，然后添加以下内容：
 
 ```css title="index.css"
-@import "tailwindcss";
+@import "weapp-tailwindcss";
 ```
 
 
-更改好配置之后，直接启动即可
+更改好配置之后，直接运行启动项目，微信开发者工具导入这个项目，即可看到效果。
 
 ## 参考模板
 
