--- a/website/docs/quick-start/v4/taro-webpack.mdx
+++ b/website/docs/quick-start/v4/taro-webpack.mdx
@@ -25,7 +25,7 @@ export default {
 ### 在你的 `app.css` 里面添加
 
 ```css
-@import "tailwindcss";
+@import "weapp-tailwindcss";
 ```
 
 ### 注册插件
@@ -64,11 +64,13 @@ import { UnifiedWebpackPluginV5 } from 'weapp-tailwindcss/webpack'
 
 ## 运行
 
-然后执行命令发布到微信小程序吧
+然后执行命令发布到微信小程序
 
 ```bash npm2yarn
 npm run dev:weapp
 ```
+
+微信开发者工具导入这个项目，即可看到效果
 
 ## 参考模板
 
