--- a/website/docs/quick-start/v4/uni-app-webpack.mdx
+++ b/website/docs/quick-start/v4/uni-app-webpack.mdx
@@ -74,11 +74,11 @@ module.exports = config
 在项目目录下，创建一个 `index.css`，然后添加以下内容：
 
 ```css title="index.css"
-@import "tailwindcss";
+@import "weapp-tailwindcss";
 ```
 
 
-然后直接运行到小程序即可
+然后直接运行到小程序，微信开发者工具导入这个项目，即可看到效果
 
 ## 参考模板
 
