--- a/website/docs/quick-start/css-unit-transform.mdx
+++ b/website/docs/quick-start/css-unit-transform.mdx
@@ -14,32 +14,9 @@
 
 ### 安装插件
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
-<Tabs>
-  <TabItem label="npm" value="npm">
-  
-```bash
+```bash npm2yarn
 npm i -D postcss-pxtransform
 ```
-
-  </TabItem>
-  <TabItem label="yarn" value="yarn">
-  
-```bash
-yarn add -D postcss-pxtransform
-```
-
-  </TabItem>
-  <TabItem label="pnpm" value="pnpm">
-  
-```bash
-pnpm i -D postcss-pxtransform
-```
-
-  </TabItem>
-</Tabs>
 
 ### 注册到 postcss 配置中
 
