--- a/website/docs/quick-start/native/0.install.mdx
+++ b/website/docs/quick-start/native/0.install.mdx
@@ -1,6 +1,3 @@
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
 # 1. 安装与配置 tailwindcss
 
 ## 前言
@@ -45,37 +42,11 @@ import TabItem from '@theme/TabItem';
 
 然后执行:
 
-<Tabs>
-  <TabItem label="npm" value="npm">
-  
-```bash
+```bash npm2yarn
 npm i -D tailwindcss@3 postcss autoprefixer
 # 初始化 tailwind.config.js 文件
 npx tailwindcss init
 ```
-
-  </TabItem>
-  <TabItem label="yarn" value="yarn">
-  
-```bash
-yarn add -D tailwindcss@3 postcss autoprefixer
-# 初始化 tailwind.config.js 文件
-npx tailwindcss init
-```
-
-  </TabItem>
-  <TabItem label="pnpm" value="pnpm">
-  
-```bash
-pnpm i -D tailwindcss@3 postcss autoprefixer
-# 初始化 tailwind.config.js 文件
-npx tailwindcss init
-```
-
-  </TabItem>
-</Tabs>
-
-
 
 这样 `tailwindcss` 就被安装到你项目本地了
 
