--- a/website/docs/quick-start/native/1.install-plugin.mdx
+++ b/website/docs/quick-start/native/1.install-plugin.mdx
@@ -1,42 +1,12 @@
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
 # 2. 安装这个插件并运行
 
 ## 安装插件
 
 在项目目录下，执行:
 
-
-<Tabs>
-  <TabItem label="npm" value="npm">
-  
-
-```bash
+```bash npm2yarn
 npm i -D weapp-tailwindcss weapp-vite
 ```
-
-
-  </TabItem>
-  <TabItem label="yarn" value="yarn">
-  
-
-```bash
-yarn add -D weapp-tailwindcss weapp-vite
-```
-
-
-  </TabItem>
-  <TabItem label="pnpm" value="pnpm">
-  
-
-```bash
-pnpm i -D weapp-tailwindcss weapp-vite
-```
-
-
-  </TabItem>
-</Tabs>
 
 这样 `weapp-tailwindcss` 和 `weapp-vite` 就被安装在你的本地了
 
@@ -61,35 +31,9 @@ npx weapp-vite init
 
 在执行完成 `weapp-vite init` 初始化命令之后，我们需要在项目里执行一下安装命令:
 
-<Tabs>
-  <TabItem label="npm" value="npm">
-  
-
-```bash
+```bash npm2yarn
 npm i
 ```
-
-
-  </TabItem>
-  <TabItem label="yarn" value="yarn">
-  
-
-```bash
-yarn
-```
-
-
-  </TabItem>
-  <TabItem label="pnpm" value="pnpm">
-  
-
-```bash
-pnpm i
-```
-
-
-  </TabItem>
-</Tabs>
 
 ## 注册插件
 
@@ -143,7 +87,7 @@ export default defineConfig({
 
 或者直接执行命令:
 
-```bash
+```bash npm2yarn
 npx weapp-vite create my-app
 ```
 
