--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -1,39 +1,46 @@
 # 优秀案例展示
 
-以下的排名按照[谁在使用？](https://github.com/sonofmagic/weapp-tailwindcss/issues/270)的小程序码或二维码提交时间顺序为基准
+以下的顺序按照[谁在使用？](https://github.com/sonofmagic/weapp-tailwindcss/issues/270)的小程序码或二维码提交时间顺序为基准
 
 ## 区白白
 
-![区白白](/img/showcase/0.qubaibai/qrcode.jpg)
+<img width={256} height={256} src="/img/showcase/0.qubaibai/qrcode.jpg" alt="区白白" />
 
 区白白是一个针对小区业主的小程序，它将不同的小区变成一个个的线上社区。业主可以在这个线上社区里参与小区事务，享受区白白的其他服务。
 
 ## MBTI 告诉你
 
-![MBTI 告诉你](/img/showcase/1.mbti/qrcode.jpg)
+<img width={256} height={256} src="/img/showcase/1.mbti/qrcode.jpg" alt="MBTI 告诉你" />
 
 ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 
 ## 今修
 
-![今修小程序](/img/showcase/2.jinxiu/qrcode.jpg)
+<img width={256} height={256} src="/img/showcase/2.jinxiu/qrcode.jpg" alt="今修小程序" />
 
 南通本土手机维修业务小程序
 
 ## 聚贞顺
 
-![聚贞顺](/img/showcase/3.juzhenshun/qrcode.jpg)
+<img width={256} height={256} src="/img/showcase/3.juzhenshun/qrcode.jpg" alt="聚贞顺" />
 
 专业买卖二手自行车平台
 
 ## 安心校友圈
 
-![安心校友圈](/img/showcase/4.安心校友圈/qrcode.jpg)
+<img width={256} height={256} src="/img/showcase/4.安心校友圈/qrcode.jpg" alt="安心校友圈" />
 
 大学生内部社交圈子
 
 ## 一键呼援
 
-![一键呼援](/img/showcase/5.一键呼援/qrcode.jpg)
+<img width={256} height={256} src="/img/showcase/5.一键呼援/qrcode.jpg" alt="一键呼援" />
 
 一键呼援的企业级方案
+
+## 杭州数据交易所
+
+<img width={256} height={256} src="/img/showcase/6.杭州数据交易所/qrcode.jpg" alt="杭州数据交易所" />
+
+
+
