--- a/website/docs/quick-start/v4/uni-app-vite-hbuilder.mdx
+++ b/website/docs/quick-start/v4/uni-app-vite-hbuilder.mdx
@@ -14,6 +14,9 @@ import Patch from './patch.mdx'
 ## 1. 安装
 
 ```bash npm2yarn
+# 初始化 package.json
+npm init
+# 安装包
 npm install -D tailwindcss @tailwindcss/vite weapp-tailwindcss
 ```
 
@@ -63,9 +66,9 @@ export default defineConfig(async () => {
 </style>
 ```
 
-> 添加 `@source not "unpackage";` 是为了避免差量编译死循环
+> 添加 `@source not "unpackage";` 是为了避免 HBuilderX 差量编译死循环问题
 
-然后运行到微信开发者工具即可
+现在，在你的页面里面去随意的编写样式，比如 `bg-[#123456] text-[#654321]`, 然后运行到微信开发者工具即可
 
 ## 参考模板
 
