chore: add base: __dirname

--- a/website/docs/quick-start/v4/UniAppHbuilderShared.mdx
+++ b/website/docs/quick-start/v4/UniAppHbuilderShared.mdx
@@ -40,7 +40,9 @@ export default defineConfig({
   css: {
     postcss: {
       plugins: [
-        tailwindcss()
+        tailwindcss({
+          base: __dirname
+        })
       ]
     }
   }
