docs: fix install docs

--- a/website/docs/quick-start/install.mdx
+++ b/website/docs/quick-start/install.mdx
@@ -11,7 +11,11 @@
 ## 1. 使用包管理器安装 `tailwindcss`
 
 ```bash npm2yarn
+# 安装 tailwindcss@3 版本的依赖
 npm i -D tailwindcss@3 postcss autoprefixer
+```
+
+```bash npm2yarn
 # 初始化 tailwind.config.js 文件
 npx tailwindcss init
 ```
