--- a/website/docs/quick-start/native/0.install.mdx
+++ b/website/docs/quick-start/native/0.install.mdx
@@ -43,7 +43,11 @@
 然后执行:
 
 ```bash npm2yarn
+# 安装 tailwindcss@3 版本的依赖
 npm i -D tailwindcss@3 postcss autoprefixer
+```
+
+```bash npm2yarn
 # 初始化 tailwind.config.js 文件
 npx tailwindcss init
 ```
