--- a/website/docs/quick-start/v4/taro-webpack.mdx
+++ b/website/docs/quick-start/v4/taro-webpack.mdx
@@ -50,7 +50,7 @@ import { UnifiedWebpackPluginV5 } from 'weapp-tailwindcss/webpack'
           install: {
             plugin: UnifiedWebpackPluginV5,
             args: [{
-              appType: 'taro'
+              // 这里可以传参数
             }]
           }
         }
