--- a/website/docs/quick-start/v4/uni-app-x.mdx
+++ b/website/docs/quick-start/v4/uni-app-x.mdx
@@ -2,4 +2,8 @@ import UniAppHbuilderShared from './UniAppHbuilderShared.mdx'
 
 # uni-app x
 
+:::warning
+暂时只支持 hbuilderx uni-app x 跨 h5 和小程序平台，原生安卓和IOS平台正在开发中，暂不支持
+:::
+
 <UniAppHbuilderShared isX />
