--- a/website/docs/quick-start/v4/uni-app-webpack.mdx
+++ b/website/docs/quick-start/v4/uni-app-webpack.mdx
@@ -1,4 +1,5 @@
 import Patch from './patch.mdx'
+import UniappCliStyle from './UniappCliStyle.mdx'
 
 # uni-app cli vue2 webpack
 
@@ -71,12 +72,7 @@ module.exports = config
 
 ## 添加样式
 
-在项目目录下，创建一个 `index.css`，然后添加以下内容：
-
-```css title="index.css"
-@import "weapp-tailwindcss";
-```
-
+<UniappCliStyle />
 
 然后直接运行到小程序，微信开发者工具导入这个项目，即可看到效果
 
